# RecipeRelay

./: .gitignore  README.md  pyproject.toml
src/: config.py  database.ini  login.py  main.py  top-1k-ingredients.csv
src/pages/: admin.py  grocerylist.py  ingredients.py  search.py  user.py
